updated index to include core module

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -13,7 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Core functionality for finsets."
+    "> Functions that are not specific to individual data sources"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These functions are available directly from the finsets namespace. For example to use the `features_metadata` function below, use \n",
+    "\n",
+    "```python\n",
+    "from finsets import features_metadata\n",
+    "```\n"
    ]
   },
   {
@@ -34,9 +46,7 @@
     "#| export\n",
     "from importlib import import_module\n",
     "from inspect import signature\n",
-    "import pandas as pd\n",
-    "\n",
-    "from finsets import wrds"
+    "import pandas as pd"
    ]
   },
   {
