--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -98,6 +98,248 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Core"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Functions that are not specific to a particular data source. \n",
+    "\n",
+    "The functions in this model are available directly in the `finsets` namespace. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>inputs</th>\n",
+       "      <th>inputs_generated_by</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bookeq</td>\n",
+       "      <td>Book equity</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>shreq</td>\n",
+       "      <td>Shareholder equity</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pref_stock</td>\n",
+       "      <td>Preferred stock</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tobinq</td>\n",
+       "      <td>Tobin Q</td>\n",
+       "      <td>wrds.compa.tobin_q</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>equityiss_tot</td>\n",
+       "      <td>Equity issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>equityiss_cfs</td>\n",
+       "      <td>Equity issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>debtiss_tot</td>\n",
+       "      <td>Debt issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>debtiss_cfs</td>\n",
+       "      <td>Debt issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>debtiss_bs</td>\n",
+       "      <td>Debt issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ppentpch</td>\n",
+       "      <td>Pct change in net PPE</td>\n",
+       "      <td>wrds.compa.investment_vars</td>\n",
+       "      <td>ppent,capx,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>capx2la</td>\n",
+       "      <td>CAPX to lagged assets</td>\n",
+       "      <td>wrds.compa.investment_vars</td>\n",
+       "      <td>ppent,capx,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>roa</td>\n",
+       "      <td>Return on assets</td>\n",
+       "      <td>wrds.compa.profitability_vars</td>\n",
+       "      <td>ib,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>cflow2la_is</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>cflow2la_cfs</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>cflow2la_full</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>cash2a</td>\n",
+       "      <td>Cash holdings to assets</td>\n",
+       "      <td>wrds.compa.liquidity_vars</td>\n",
+       "      <td>che,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>booklev</td>\n",
+       "      <td>Book leverage</td>\n",
+       "      <td>wrds.compa.leverage_vars</td>\n",
+       "      <td>dltt,dlc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>div2la</td>\n",
+       "      <td>Dividends to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>rep2la</td>\n",
+       "      <td>Repurchases to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name  ... inputs_generated_by\n",
+       "0          bookeq  ...    wrds.compa.clean\n",
+       "1           shreq  ...    wrds.compa.clean\n",
+       "2      pref_stock  ...    wrds.compa.clean\n",
+       "3          tobinq  ...    wrds.compa.clean\n",
+       "4   equityiss_tot  ...    wrds.compa.clean\n",
+       "5   equityiss_cfs  ...    wrds.compa.clean\n",
+       "6     debtiss_tot  ...    wrds.compa.clean\n",
+       "7     debtiss_cfs  ...    wrds.compa.clean\n",
+       "8      debtiss_bs  ...    wrds.compa.clean\n",
+       "9        ppentpch  ...    wrds.compa.clean\n",
+       "10        capx2la  ...    wrds.compa.clean\n",
+       "11            roa  ...    wrds.compa.clean\n",
+       "12    cflow2la_is  ...    wrds.compa.clean\n",
+       "13   cflow2la_cfs  ...    wrds.compa.clean\n",
+       "14  cflow2la_full  ...    wrds.compa.clean\n",
+       "15         cash2a  ...    wrds.compa.clean\n",
+       "16        booklev  ...    wrds.compa.clean\n",
+       "17         div2la  ...    wrds.compa.clean\n",
+       "18         rep2la  ...    wrds.compa.clean\n",
+       "\n",
+       "[19 rows x 5 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fds.features_metadata()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## WRDS"
    ]
   },
