added search function to core module

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -46,7 +46,8 @@
     "#| export\n",
     "from importlib import import_module\n",
     "from inspect import signature\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from  thefuzz import process"
    ]
   },
   {
@@ -741,7 +742,257 @@
     }
    ],
    "source": [
-    "all_metadata()"
+    "meta = all_metadata()\n",
+    "meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def search(label: str,\n",
+    "           meta_func: callable=all_metadata,\n",
+    "           limit: int=10,\n",
+    "           score_cutoff: int=85\n",
+    "           ) -> pd.DataFrame:\n",
+    "    \"Search for `label` in metadata returned by `meta_func` and return `limit` number of results with `score_cutoff`\"\n",
+    "\n",
+    "    metadata = meta_func()\n",
+    "    results = process.extractBests(label, metadata['label'], limit=limit, score_cutoff=score_cutoff)\n",
+    "    rows = [x[2] for x in results]\n",
+    "    return metadata.iloc[rows]   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>inputs</th>\n",
+       "      <th>inputs_generated_by</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tobinq</td>\n",
+       "      <td>Tobin Q</td>\n",
+       "      <td>wrds.compa.tobin_q</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name    label           output_of  \\\n",
+       "3  tobinq  Tobin Q  wrds.compa.tobin_q   \n",
+       "\n",
+       "                                              inputs inputs_generated_by type  \n",
+       "3  at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...    wrds.compa.clean  NaN  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search('tobins q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>inputs</th>\n",
+       "      <th>inputs_generated_by</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>at</td>\n",
+       "      <td>Assets - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>aco</td>\n",
+       "      <td>Current Assets Other Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>acoxar</td>\n",
+       "      <td>Current Assets - Other - Total As Reported</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>act</td>\n",
+       "      <td>Current Assets - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>artfs</td>\n",
+       "      <td>Accounts Receivable/Debtors - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>ceq</td>\n",
+       "      <td>Common/Ordinary Equity - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>clt</td>\n",
+       "      <td>Contingent Liabilities - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>dlc</td>\n",
+       "      <td>Debt in Current Liabilities - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>dltt</td>\n",
+       "      <td>Long-Term Debt - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>dptb</td>\n",
+       "      <td>Deposits - Total - Banks</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name                                        label         output_of  \\\n",
+       "110      at                              Assets - Total   wrds.compa.clean   \n",
+       "88      aco                  Current Assets Other Total   wrds.compa.clean   \n",
+       "92   acoxar  Current Assets - Other - Total As Reported   wrds.compa.clean   \n",
+       "93      act                      Current Assets - Total   wrds.compa.clean   \n",
+       "109   artfs         Accounts Receivable/Debtors - Total   wrds.compa.clean   \n",
+       "116     ceq              Common/Ordinary Equity - Total   wrds.compa.clean   \n",
+       "134     clt              Contingent Liabilities - Total   wrds.compa.clean   \n",
+       "156     dlc         Debt in Current Liabilities - Total   wrds.compa.clean   \n",
+       "160    dltt                      Long-Term Debt - Total   wrds.compa.clean   \n",
+       "176    dptb                    Deposits - Total - Banks   wrds.compa.clean   \n",
+       "\n",
+       "    inputs inputs_generated_by    type  \n",
+       "110    NaN                 NaN  double  \n",
+       "88     NaN                 NaN  double  \n",
+       "92     NaN                 NaN  double  \n",
+       "93     NaN                 NaN  double  \n",
+       "109    NaN                 NaN  double  \n",
+       "116    NaN                 NaN  double  \n",
+       "134    NaN                 NaN  double  \n",
+       "156    NaN                 NaN  double  \n",
+       "160    NaN                 NaN  double  \n",
+       "176    NaN                 NaN  double  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search('total asset')"
    ]
   },
   {
@@ -753,13 +1004,6 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
