--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -302,28 +302,68 @@
        "</div>"
       ],
       "text/plain": [
-       "             name  ... inputs_generated_by\n",
-       "0          bookeq  ...    wrds.compa.clean\n",
-       "1           shreq  ...    wrds.compa.clean\n",
-       "2      pref_stock  ...    wrds.compa.clean\n",
-       "3          tobinq  ...    wrds.compa.clean\n",
-       "4   equityiss_tot  ...    wrds.compa.clean\n",
-       "5   equityiss_cfs  ...    wrds.compa.clean\n",
-       "6     debtiss_tot  ...    wrds.compa.clean\n",
-       "7     debtiss_cfs  ...    wrds.compa.clean\n",
-       "8      debtiss_bs  ...    wrds.compa.clean\n",
-       "9        ppentpch  ...    wrds.compa.clean\n",
-       "10        capx2la  ...    wrds.compa.clean\n",
-       "11            roa  ...    wrds.compa.clean\n",
-       "12    cflow2la_is  ...    wrds.compa.clean\n",
-       "13   cflow2la_cfs  ...    wrds.compa.clean\n",
-       "14  cflow2la_full  ...    wrds.compa.clean\n",
-       "15         cash2a  ...    wrds.compa.clean\n",
-       "16        booklev  ...    wrds.compa.clean\n",
-       "17         div2la  ...    wrds.compa.clean\n",
-       "18         rep2la  ...    wrds.compa.clean\n",
+       "             name                                  label  \\\n",
+       "0          bookeq                            Book equity   \n",
+       "1           shreq                     Shareholder equity   \n",
+       "2      pref_stock                        Preferred stock   \n",
+       "3          tobinq                                Tobin Q   \n",
+       "4   equityiss_tot                        Equity issuance   \n",
+       "5   equityiss_cfs                        Equity issuance   \n",
+       "6     debtiss_tot                          Debt issuance   \n",
+       "7     debtiss_cfs                          Debt issuance   \n",
+       "8      debtiss_bs                          Debt issuance   \n",
+       "9        ppentpch                  Pct change in net PPE   \n",
+       "10        capx2la                  CAPX to lagged assets   \n",
+       "11            roa                       Return on assets   \n",
+       "12    cflow2la_is  Operating cash flows to lagged assets   \n",
+       "13   cflow2la_cfs  Operating cash flows to lagged assets   \n",
+       "14  cflow2la_full  Operating cash flows to lagged assets   \n",
+       "15         cash2a                Cash holdings to assets   \n",
+       "16        booklev                          Book leverage   \n",
+       "17         div2la             Dividends to lagged assets   \n",
+       "18         rep2la           Repurchases to lagged assets   \n",
        "\n",
-       "[19 rows x 5 columns]"
+       "                        output_of  \\\n",
+       "0          wrds.compa.book_equity   \n",
+       "1          wrds.compa.book_equity   \n",
+       "2          wrds.compa.book_equity   \n",
+       "3              wrds.compa.tobin_q   \n",
+       "4        wrds.compa.issuance_vars   \n",
+       "5        wrds.compa.issuance_vars   \n",
+       "6        wrds.compa.issuance_vars   \n",
+       "7        wrds.compa.issuance_vars   \n",
+       "8        wrds.compa.issuance_vars   \n",
+       "9      wrds.compa.investment_vars   \n",
+       "10     wrds.compa.investment_vars   \n",
+       "11  wrds.compa.profitability_vars   \n",
+       "12       wrds.compa.cashflow_vars   \n",
+       "13       wrds.compa.cashflow_vars   \n",
+       "14       wrds.compa.cashflow_vars   \n",
+       "15      wrds.compa.liquidity_vars   \n",
+       "16       wrds.compa.leverage_vars   \n",
+       "17         wrds.compa.payout_vars   \n",
+       "18         wrds.compa.payout_vars   \n",
+       "\n",
+       "                                               inputs inputs_generated_by  \n",
+       "0         at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
+       "1         at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
+       "2         at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
+       "3   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...    wrds.compa.clean  \n",
+       "4   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  \n",
+       "5   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  \n",
+       "6   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  \n",
+       "7   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  \n",
+       "8   at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  \n",
+       "9                                       ppent,capx,at    wrds.compa.clean  \n",
+       "10                                      ppent,capx,at    wrds.compa.clean  \n",
+       "11                                              ib,at    wrds.compa.clean  \n",
+       "12                              dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "13                              dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "14                              dtdate,oancf,ib,dp,at    wrds.compa.clean  \n",
+       "15                                             che,at    wrds.compa.clean  \n",
+       "16                                        dltt,dlc,at    wrds.compa.clean  \n",
+       "17                                      dvc,prstkc,at    wrds.compa.clean  \n",
+       "18                                      dvc,prstkc,at    wrds.compa.clean  "
       ]
      },
      "execution_count": null,
@@ -333,6 +373,182 @@
    ],
    "source": [
     "fds.features_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>inputs</th>\n",
+       "      <th>inputs_generated_by</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>at</td>\n",
+       "      <td>Assets - Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>capx2la</td>\n",
+       "      <td>CAPX to lagged assets</td>\n",
+       "      <td>wrds.compa.investment_vars</td>\n",
+       "      <td>ppent,capx,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>cflow2la_is</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>cflow2la_cfs</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>cflow2la_full</td>\n",
+       "      <td>Operating cash flows to lagged assets</td>\n",
+       "      <td>wrds.compa.cashflow_vars</td>\n",
+       "      <td>dtdate,oancf,ib,dp,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>cash2a</td>\n",
+       "      <td>Cash holdings to assets</td>\n",
+       "      <td>wrds.compa.liquidity_vars</td>\n",
+       "      <td>che,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>div2la</td>\n",
+       "      <td>Dividends to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>rep2la</td>\n",
+       "      <td>Repurchases to lagged assets</td>\n",
+       "      <td>wrds.compa.payout_vars</td>\n",
+       "      <td>dvc,prstkc,at</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>acdo</td>\n",
+       "      <td>Current Assets of Discontinued Operations</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>aco</td>\n",
+       "      <td>Current Assets Other Total</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              name                                       label  \\\n",
+       "110             at                             Assets - Total    \n",
+       "10         capx2la                       CAPX to lagged assets   \n",
+       "12     cflow2la_is       Operating cash flows to lagged assets   \n",
+       "13    cflow2la_cfs       Operating cash flows to lagged assets   \n",
+       "14   cflow2la_full       Operating cash flows to lagged assets   \n",
+       "15          cash2a                     Cash holdings to assets   \n",
+       "17          div2la                  Dividends to lagged assets   \n",
+       "18          rep2la                Repurchases to lagged assets   \n",
+       "87            acdo  Current Assets of Discontinued Operations    \n",
+       "88             aco                 Current Assets Other Total    \n",
+       "\n",
+       "                      output_of                 inputs inputs_generated_by  \\\n",
+       "110            wrds.compa.clean                    NaN                 NaN   \n",
+       "10   wrds.compa.investment_vars          ppent,capx,at    wrds.compa.clean   \n",
+       "12     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
+       "13     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
+       "14     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
+       "15    wrds.compa.liquidity_vars                 che,at    wrds.compa.clean   \n",
+       "17       wrds.compa.payout_vars          dvc,prstkc,at    wrds.compa.clean   \n",
+       "18       wrds.compa.payout_vars          dvc,prstkc,at    wrds.compa.clean   \n",
+       "87             wrds.compa.clean                    NaN                 NaN   \n",
+       "88             wrds.compa.clean                    NaN                 NaN   \n",
+       "\n",
+       "       type  \n",
+       "110  double  \n",
+       "10      NaN  \n",
+       "12      NaN  \n",
+       "13      NaN  \n",
+       "14      NaN  \n",
+       "15      NaN  \n",
+       "17      NaN  \n",
+       "18      NaN  \n",
+       "87   double  \n",
+       "88   double  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fds.search('total assets')"
    ]
   },
   {
