added finsets_search cli command

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -1629,9 +1629,9 @@
     "\n",
     "    metadata = {'inputs': {'wrds.compa.clean': ['dtdate','oancf','ib','dp','at']},\n",
     "                'outputs': ['cflow2la_is', 'cflow2la_cfs', 'cflow2la_full'],\n",
-    "                'labels': {'cflow2la_is':'Operating cash flows to lagged assets', \n",
-    "                           'cflow2la_cfs':'Operating cash flows to lagged assets', \n",
-    "                           'cflow2la_full':'Operating cash flows to lagged assets'}\n",
+    "                'labels': {'cflow2la_is':'Cash flows to lagged assets', \n",
+    "                           'cflow2la_cfs':'Cash flows to lagged assets', \n",
+    "                           'cflow2la_full':'Cash flows to lagged assets'}\n",
     "    }      \n",
     "    if return_metadata: return metadata\n",
     "\n",
